完善了代码2